complete hero section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   
+  <section class="hero-section">
+    <div class="nav-area">
+      <div class="logo-area">
+        <h2>WebDeveloper BD</h2>
+      </div>
+      <div class="menu-area">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Skill</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="content-area">
+      <h2>I'm Mostafizur Rahman Limon</h2>
+      <h3>A programmar, Webdeveloper, Travellar</h3>
+      <a class="btn" href="#">Hire Me</a>
+    </div>
+  </section>
+
 </body>
 </html>
