about section completed

--- a/index.html
+++ b/index.html
@@ -33,5 +33,17 @@
     </div>
   </section>
 
+
+  <section class="about-section">
+    <div class="myinformation item">
+      <h2>About Me</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, eos explicabo rerum ex autem suscipit temporibus magnam, itaque iusto minima facilis quasi maxime? Iusto quos ipsa itaque quisquam iste quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt consequuntur harum, maxime aperiam facilis architecto expedita perferendis aliquam beatae quidem?</p>
+      <a class="btn" href="#">Get Resume</a>
+    </div>
+    <div class="my-image item">
+      <img src="img/limon1.jpg" alt="">
+    </div>
+  </section>
+
 </body>
 </html>
