--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Skill</a></li>
+          <li><a href="#">Services</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
@@ -72,6 +73,28 @@
       </div>
     </div>
 
+  </section>
+
+
+  <section class="services-section">
+    <h2>Our Services</h2>
+    <div class="main-content">
+      <div class="item one myinformation">
+        <h3>Web Design</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum sit porro a distinctio eum inventore deserunt aliquam explicabo iure ipsam ipsum tenetur excepturi, perspiciatis eligendi soluta delectus saepe, expedita minima.</p>
+        <a href="#" class="btn">See More</a>
+      </div>
+      <div class="item two myinformation">
+        <h3>Web Development</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum sit porro a distinctio eum inventore deserunt aliquam explicabo iure ipsam ipsum tenetur excepturi, perspiciatis eligendi soluta delectus saepe, expedita minima.</p>
+        <a href="#" class="btn">See More</a>
+      </div> 
+      <div class="item three myinformation">
+        <h3>Grapysics Design</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum sit porro a distinctio eum inventore deserunt aliquam explicabo iure ipsam ipsum tenetur excepturi, perspiciatis eligendi soluta delectus saepe, expedita minima.</p>
+        <a href="#" class="btn">See More</a>
+      </div>
+    </div>
   </section>
 
 </body>
