contact form and footer added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="hero-section">
     <div class="nav-area">
       <div class="logo-area">
-        <h2>WebDeveloper BD</h2>
+        <h2>MERN STACk</h2>
       </div>
       <div class="menu-area">
         <ul>
@@ -96,6 +96,24 @@
       </div>
     </div>
   </section>
+
+
+  <section class="contact-form-section">
+    <h2>Contact Form</h2>
+    <form action="#" class="contact-form">
+      <input type="text" class="item2" placeholder="Your Name">
+      <input type="email" class="item2" placeholder="Your Email">
+      <input type="tel" class="item2" placeholder="Your Phone">
+      <input type="password" class="item2" placeholder="Your password">
+      <textarea name="bio" id="" cols="30" rows="10" class="item2" placeholder="Write Your Text"></textarea>
+      <a href="#" class="btn">Send</a>
+    </form>
+  </section>
+  
+  <footer>
+    <p>&copy all rights reserved by Mostafizur Rahman Limon</p>
+  </footer>
+
 
 </body>
 </html>
